# Gruvbox-Ports

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  bacon.toml  flake.nix
migrations/: 20260330180000_create_categories.sql  20260330180001_create_ports.sql  20260330180002_enable_fuzzy_search.sql  20260330180003_add_trigram_indexes.sql
public/css/: style.css
src/: config.rs  database.rs  db.rs  main.rs  state.rs
src/models/: category.rs  mod.rs  port.rs
src/router/: mod.rs
src/templates/: mod.rs
src/types/: email.rs  hashed_password.rs  id.rs  money.rs  raw_password.rs
templates/: index.html
templates/layouts/: base.html
templates/partials/: main-content.html  ports-grid.html  toolbar.html
