[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.15.6"
axum = { version = "0.8.8", features = ["macros", "tracing"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
htmx = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.0", features = ["v7", "serde"] }

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "migrate"] }
